feat: add history delete and run api
